# OpenLong

./: .gitignore  README.md  start-openlong.bat  start.py
src/backend/: .env.example  README.md  pyproject.toml  requirements.txt
src/backend/app/: __init__.py  __main__.py  acp_bridge.py  cli.py  main.py
src/backend/app/agent/: __init__.py  loop.py  model_client.py  planner.py  prompt_builder.py  response_generator.py  runtime.py  types.py
src/backend/app/automation/: __init__.py  cron.py  manager.py  service.py  types.py
src/backend/app/channel/: __init__.py  manager.py
src/backend/app/context/: __init__.py  manager.py
src/backend/app/core/: __init__.py  config.py  events.py  logging.py  security.py
src/backend/app/gateway/: __init__.py  agent_manager.py  api.py  model_router.py  runtime.py  session_manager.py  (+2 more)
src/backend/tests/: __init__.py  test_acp_bridge.py  test_agent_runtime_stage3.py  test_automation_system_stage12.py  test_cli_mvp.py  test_config_loading.py  test_context_system_stage4.py  test_gateway_runtime.py  test_gateway_security.py  test_health.py  test_memory_system_stage5.py  test_model_client_external_api.py  test_model_routing.py  test_plugin_system_stage10.py  test_scaffold_imports.py  test_self_evolution_stage13.py  test_session_persistence.py  test_shell_approval_flow.py  test_skill_system_stage6.py  test_start_script.py  test_structured_tool_use.py  test_system_integration_stage9.py  test_tool_system_stage7.py  test_web_coding_workflow.py  test_web_ide_api.py  test_workspace_management_api.py  test_workspace_system_stage8.py
(+52 files in other folders)
