[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openlong-backend"
version = "0.1.0"
description = "OpenLong backend scaffold"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
